# homex-esp-iot-sensor

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  partitions.csv  sdkconfig
components/device/: CMakeLists.txt  component.mk  device.cpp
components/device/include/: device.h
components/dht/: CMakeLists.txt  LICENSE  component.mk  dht.c
components/dht/include/: dht.h
components/led/: CMakeLists.txt  component.mk  led.cpp
components/led/include/: led.h
components/network/: CMakeLists.txt  component.mk  network.cpp
components/network/include/: network.h
components/sensor/: CMakeLists.txt  component.mk  sensor.cpp
components/sensor/include/: sensor.h
components/util/: CMakeLists.txt  component.mk  util.cpp
components/util/include/: util.h
data/: config.json  info.json
keys/: sc_key
main/: CMakeLists.txt  main.cpp
